<resources>
    <string name="app_name">SmsWebHub</string>
    <string name="title_web_hub">Web Hub</string>
    <string name="title_sms_forward">Sms Forward</string>
    <string name="title_notification_forward">Notis Forward</string>
    <string name="title_settings">Settings</string>
    <string name="set">Set</string>
    <string name="connect">Connect</string>
    <string name="web_hub_guide">Enter the address of your VPS Web Hub server:</string>
    <string name="url_hint">example.com:8080</string>
    <string name="sms_forward_guide">When a new SMS arrives, it\'ll be forwarded to the below URL:</string>
    <string name="noti_forward_guide">When a new Notification comes, it\'ll be forwarded to the below URL:</string>
    <string name="url">URL:</string>
    <string name="prefix_sender">Prefix Sender</string>
    <string name="hint_sender">sender</string>
    <string name="prefix_content">Prefix Content:</string>
    <string name="hint_content">content</string>
    <string name="prefix_time">Prefix Time:</string>
    <string name="hint_time">time</string>
    <string name="prefix_token">Prefix Token:</string>
    <string name="your_token">Your Token:</string>
    <string name="hint_token">secret</string>
    <string name="preview">Preview:</string>
    <string name="last_request_from_web">Last request from web:</string>
    <string name="connecting">Connecting…</string>
    <string name="none">none</string>
    <string name="last_action">Last action:</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="web_hub_token_guide">Enter your secret token, web request must have this token to be transferred to your mobile</string>
    <string name="setting_guide_1">You must grant "Read Notification" permission to make forwarding service works.</string>
    <string name="setting_guide_2">If service is not running, you can start it manually by pressing below button</string>
    <string name="prefix_app">Prefix App:</string>
    <string name="hint_app">app</string>
    <string name="prefix_title">Prefix Title:</string>
    <string name="hint_title">title</string>
    <string name="version">version</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="copy_log">Copy Log</string>
    <string name="clear_log">Clear Log</string>
</resources>
