<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_web_hub">

    <fragment
        android:id="@+id/navigation_web_hub"
        android:name="com.trongvq.smswebhub.ui.webhub.WebHubFragment"
        android:label="@string/title_web_hub"
        tools:layout="@layout/fragment_web_hub" />

    <fragment
        android:id="@+id/navigation_sms_forward"
        android:name="com.trongvq.smswebhub.ui.smsforward.SmsForwardFragment"
        android:label="@string/title_sms_forward"
        tools:layout="@layout/fragment_sms_forward" />

    <fragment
        android:id="@+id/navigation_notification_forward"
        android:name="com.trongvq.smswebhub.ui.notificationforward.NotificationForwardFragment"
        android:label="@string/title_notification_forward"
        tools:layout="@layout/fragment_notification_forward" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.trongvq.smswebhub.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>